Added the commit messages for the r1rho_plotting branch to the CHANGES file for relax 3.3.0.
These have not been processed yet, as this will be a lot of work.

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -642,6 +642,94 @@ http://svn.gna.org/svn/relax/tags/3.3.0
 
 
         * Initialized merge tracking via "svnmerge" with revisions "1-24672" from  svn+ssh://bugman@svn.gna.org/svn/relax/branches/r1rho_plotting
+        * This branch is created for the Support Request: sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Initialized merge tracking via "svnmerge" with revisions "1-24671" from  svn+ssh://tlinnet@svn.gna.org/svn/relax/trunk
+        * Split out the interpolating in specific_analyses.relax_disp.data.plot_disp_curves() into separate function.  This is to prepare for a interpolating function for spin-lock offset rather than spin-lock field strength for R1rho models.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Split out the looping over frequency and offset into its own function, in function of specific_analysis.relax_disp.data.plot_disp_curves().  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Split out the writing of dispersion graph files in specific_analyses.relax_disp.data.plot_disp_curves().  This is to prepare for a stand-alone function to plot R1rho graphs, interpolating theta through spin-lock offset rather than spin-lock field strength.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for function calling and default values of None in sup-plotting functions.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Large extension of specific_analyses.relax_disp.data(), by adding several helper plotting functions.  This is to prepare for plotting R1rho R2 as function of effective field in rotating frame: w_eff. R_2 = R1rho / sin^2(theta) - R_1 / tan^2(theta) = (R1rho - R_1 * cos^2(theta) ) / sin^2(theta)  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Extended specific_analyses.relax_disp.optimisation.back_calc_r2eff() to handle interpolated spin-lock offset values.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Removed a wrong adding of empty offset dimension in the get_back_calc() function of target_functions.relax_disp().  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added the the back_calculated R_2 as function of effective field in rotating frame: w_eff.  R1rho R_2 is defined as: R_2 = R1rho / sin^2(theta) - R_1 / tan^2(theta) = (R1rho - R_1 * cos^2(theta) ) / sin^2(theta)  This is described more at: http://wiki.nmr-relax.com/DPL94#Equation_-_re-writed_forms  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added an intermediate attempt to show the back_calculated data in the graph for R1rho R2 as function of the effective field in rotating frame: w_eff.  The graph is aiming for the representation of Figure 2 in Kjaergaard et al 2013. (http://dx.doi.org/10.1021/bi4001062). The figure can be seen at https://gna.org/support/download.php?file_id=20208.  It becomes clear, that it is not neccessary interpolate through the spin-lock offset, but it is suffucient to interpolate through the spin-lock field strengths. The necessary step was the extraction of the effective effective field in rotating frame, w_eff.  In earlier attempt is shown at: http://wiki.nmr-relax.com/File:Matplotlib_52_N_R1_rho_R2eff_w_eff.png  This though show lines for 6 offset values. The question is how to show the single line of interpolation.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added NMR library function to convert the given frequency from rad/s to ppm units.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Hard-coded restriction of R1rho extra plotting to model DPL94, TP02, TAP03, MP05, NS_R1RHO_2SITE.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for sending the correct data structures to target function, and fix for the spin index which is always zero in graph production.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Moved the file_name creation out of the interpolate function, to make it a general function for interpolating.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Made both interploation functions of the spin-lock field strength and spin-Ãlock offset return the offset data.  This is make it possible to switch between the interpolating functions, when plotting R1rho graphs.  This is necessary to produce the R2 as function of effective field in rotating frame w_eff, and to produce R1rho as function of theta, when ramping the spin-lock offset.  These graphs can be seen at: http://wiki.nmr-relax.com/Matplotlib_DPL94_R1rho_R2eff  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Changed interpolation function from offset to spin lock field strength, to plot R1rho R2 as function of effective field.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Inverted the input to atan2() function in specific_analyses/relax_disp/data.py.  This has no influence on the system tests.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Changes to the writing out of theta, and its corresponding systemtest after swithching the input to atan2().  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Reverted r24767 and 24766 as this was fatal systemtest Relax_disp.test_r1rho_kjaergaard_man().  The model "No Rex" would be selected instead of "DPL94", after the change.  The command used was: svn merge -r24767:r24765 .
+        * Improved axis label for plotting R1rho R2 as function of effective field w_eff.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added sub-title to the plot of R1rho R2 as function of effective field.  This is to add information about how the effective field has been interpolated.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added functionality to plot R1rho R2 as function of effective field w_eff, for the R2eff model.  Also renamed a function, to better reflect is functionality.  The hard-coding of which models to plot, has been removed. If the exp-type is R1rho, then the plotting will commence.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added the spin specific residue name and spin_id to the title of the dispersion plots.  This is handy, since it is often of interest to have this information at hand, when looking through many graphs.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed and improved epydoc information for interpolating fucntion for dispersion values.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed the interpolating function for offset, and improved the epydoc information.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Corrected the epydoc information for the return_offset_data() function in specific_analyses.relax_disp.data.  The function has been extended to return more data.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed function to represent the functionality of returning data in correct xmgrace form.  Also improved the epydoc information, for the return of values.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed the other function to represent the functionality of returning data in correct xmgrace form.  Also improved the epydoc information, for the return of values.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added function to calculate rotating frame paramters for lib/nmr.py.  This function is called several times in specific_analyses/relax_disp/data.py by plotting functions.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Replaced repeated calculation of rotating frame parameters to use function in lib/nmr.py.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Skip production of plotting r1rho r2 as function of effective field w_eff, when spin.isotope is not present.  This can happen when it is 'exp_fit' model curve fitting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added functionality to function to accept how the first part of the filename is formed.  This is to prepare to re-use the same plotting function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed plotting sub function, to accept different file name arguments, and X-axis arguments.  This is to reuse the sub-plot function to plot against different x-axis.  Added plot of R1rho as function of theta, where interpolated against spin-lock field strenght.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Prepared flag, to tell which data type to interpolate through.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Preparation to interpolate through the offset to plot R1rho as function of theta, interpolated through spin-lock offset.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added graph functionality, to plot R1rho as function of theta, when spin-lock offset is interpolated.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Ensured production of plotting r1rho r2 as function of effective field w_eff, when spin.isotope is not present.  The offset in radians would be set to 0.0 instead.  This can happen when it is 'exp_fit' model curve fitting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added function to return spin info, and a function to return a spin string for graphs.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Replaced the spin info string in the title of graphs, with the new function method.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added keywords to be used to backend function of Ãplot_disp_curves.  The keyword 'y_axis', determine which y data to be plotted on this axis. The keyword 'x_axis', determine which x data to be plotted on this axis. extend_hz, determine how far to extend interpolated CPMG frequency or spin-Ãlock field strenght. extend_ppm, determine how far to extend interpolated spin-lock offsets. interpolate, determine to interpolate dispersion points, or offset.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Made the plotting function uniform into accepting both CPMG and R1rho data.  Also made a function to return data, depending if it is data, back calculated, interpolated or residual.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed return grace data function, to a better shorter name.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed the other return grace data function, to a better shorter name.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Hardcoded xmgrace colour_order, and made function to return data label, and data plot settings, depending on data type.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed plotting function to represent the function of writing to file.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Removed unused plotting function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for output catching after re-order or return_offset_data() function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Reverted r24827 as this was two commits mixed up.  The command used was: svn merge -r24827:r24826 .
+        * Streamlined plotting functions, to have similar input.  Reordered the output from return_offset_data(), interpolate_disp() and interpolate_offset(), to reflect the order of data type. Made the input to return_grace_data_vs_disp(), return_grace_data_vs_offset the same(). Added the interpolate flag to return_grace_data_vs_disp() and return_grace_data_vs_offset(), to help return correct X-value. Added the interpolate flag to return_x_y_point(), to help determine if "disp point" or "offset point" should be returned. Added the "offset point" to return_x_y_point() function, to make it possible to plot against offset. Cleaned up the return_grace_data_vs_offset() function, to use newly created return_x_y_labels() function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for output catching after re-order or return_offset_data() function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Removed un-used return_grace_data..() function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Made uniform function for returning x_axis and y_axis labels for xmgrace plotting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Renamed return functions, to reflect they are specific for xmgrace plotting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Extended relax_disp auto_analyses to plot special R1rho graphs.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Modified front-end user-function to relax_disp.plot_disp_curves() to parse new arguments to back-end function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added new unicode symbols to be parsed to the GUI dropdowns menu.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Modified back-end of plot_disp_curves() to reflect changes to the front-end function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Extended systemtest Relax_disp.test_r1rho_kjaergaard_auto(), to check that the expected graphs exist.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added model 'No Rex' to systemtest Relax_disp.test_r1rho_kjaergaard_auto(), to check all graphs are produced.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added function to return the initial part of the file name for grace plotting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Modified systemtest to use the new function to return initial part of file name for grace plotting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Started testing all possible combinations of graphs for R1rho analysis.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added more print out, to detect which graphs are not working.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added forgotten "interpolate" type to function which return X,Y point to xmgrace graphs.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for interpolation graph when plotting R1rho R2 as function of offset (ppm).  Missed to extract the offset value from list.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Forcing overwrite of special R1rho graphs in auto analyses in relax_disp.  The other graphs are also auto forced.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added systemtest Relax_disp.test_r1rho_kjaergaard_auto_check_graphs, to check that the contents of all combinations of graphs are consistent.  The systemtest actual show that the error is changing per run-through.  This is a bug, which should be corrected.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added graphs to check against in systemtest test_r1rho_kjaergaard_auto_check_graphs.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Code validation of systemtest file for Relax_disp.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix to systemtest Relax_disp.test_r1rho_kjaergaard_auto_check_graphs by only comparing X,Y values, and skipping the error.  This is a hack until the error difference bug gets corrected.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added systemtest Relax_disp.test_kteilum_fmpoulsen_makke_check_graphs() to check all possible combinations of dispersion plotting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for GUI text in MS Windows, since subscript 1, and greek theta symbol is not working in this unicode system.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for desc_short, in user function relax_disp.plot_disp_curves.  The text "The " is preformed in the formatting.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for systemtest, after movind graphs to check against.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Moved graph files up one level in systemtest.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for forgotton removal of counter.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added check function for relax_disp. This function check if interpolating against offset for non-R1 exp types, and will raise an Error.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added check function to plot_disp_curves, to check that CPMG exptypes are not interpolated against offset, which is not implemented.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for forgotten "1" in lib text GUI.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Improved description in GUI text for user function relax_disp.plot_disp_curves().  The improved description now explains the new features.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Extended graph labelling, file naming and return of data for multiple CPMG graphs types.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added systemtest Relax_disp.test_kteilum_fmpoulsen_makke_check_graphs to check all CPMG graph combinations of:  y_axis_types = [Y_AXIS_R2_EFF, Y_AXIS_R2_R1RHO] x_axis_types = [X_AXIS_DISP, X_AXIS_THETA, X_AXIS_W_EFF] interpolate_types = [INTERPOLATE_DISP]  This is a total of 6 graphs.  The graphs will in most cases be totally equal, since the theta angle is calculated to 90 degrees, and R1 is returned as 0.0, then R2=(R1rho - R1 cos^2(theta)) / sin^2(theta) = R1rho = R2eff for CPMG models.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Added graphs to check against for system test: Relax_disp.test_kteilum_fmpoulsen_makke_check_graphs.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Expanded ex. to example in help text for function.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Merged revisions 24679,24684-24685,24702-24704,24707,24714,24718,24720,24722-24723,24725,24727,24729,24736-24737,24739-24743,24751-24752,24755-24757,24788,24796-24797,24837,24841,24843,24857,24866,24873-24875,24880-24883 via svnmerge from  svn+ssh://tlinnet@svn.gna.org/svn/relax/trunk
+        * Deleted unused comment line.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
+        * Fix for unit test, where return_offset() function return has been expanded and re-ordered.  sr #3124(https://gna.org/support/?3124): Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff. sr #3138(https://gna.org/support/?3138): Interpolating theta through spin-lock offset [Omega], rather than spin-lock field strength [w1].
         * Removed merge tracking for "svnmerge" for  svn+ssh://bugman@svn.gna.org/svn/relax/branches/r1rho_plotting
 
 
